# kinect-telepresence

./: .gitmodules  README.md  cam_reproject.py  cam_reproject_undist.py  jbu.py  open3d_vis.py  undistort.py
camera/: intrinsics.py
cpp_offline_proc/: CMakeLists.txt  README.md  main.cpp  output  run.sh  try.cpp
cpp_offline_proc/headers/: undistort.h
cpp_offline_proc/mkv_input/: capture.mkv
cpp_offline_proc/src/: undistort.cpp
docker/: Dockerfile  run_local.sh  source.sh
kinect_telepresence/: requirements.txt  setup.py
kinect_telepresence/camera/: intrinsics.py
kinect_telepresence/geometry/: pointcloud.py
kinect_telepresence/kinect_telepresence/camera/: camera.py  intrinsics.py
kinect_telepresence/kinect_telepresence/distortion/: undistort.py
kinect_telepresence/kinect_telepresence/filtering/: jbu.py
kinect_telepresence/kinect_telepresence/geometry/: homogeneous.py  pointcloud.py
kinect_telepresence/utils/: utils.py
scripts/: reprojection_demo.py
